# boson

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  compose.yaml
.github/workflows/: ci.yml  dashboard-image.yml
adapters/mailer-local/: Cargo.toml
adapters/mailer-local/src/: lib.rs
adapters/mailer-smtp/: Cargo.toml
adapters/mailer-smtp/src/: lib.rs
adapters/queue-postgres/: Cargo.toml
adapters/queue-postgres/src/: lib.rs
adapters/storage-local/: Cargo.toml
adapters/storage-local/src/: lib.rs
adapters/storage-s3/: Cargo.toml
adapters/storage-s3/src/: lib.rs
apps/cli/: Cargo.toml
apps/cli/src/: client.rs  main.rs  project.rs  templates.rs
apps/cli/src/commands/: config.rs  deploy.rs  dev.rs  doctor.rs  init.rs  lifecycle.rs  migrate.rs  mod.rs  update.rs
apps/dashboard/: index.html  package-lock.json  package.json
apps/dashboard/public/: config.js
apps/dashboard/src/: App.tsx  index.css
apps/dashboard/src/components/: app-sidebar.tsx  connect-card.tsx  status-badge.tsx
apps/dashboard/src/components/ui/: chart.tsx  select.tsx
apps/dashboard/src/hooks/: use-admin-query.ts
apps/dashboard/src/lib/: api.ts  metrics.ts
apps/dashboard/src/pages/: administrators.tsx  audit.tsx  configuration.tsx  database.tsx  events.tsx  health.tsx  jobs.tsx  notifications.tsx  organizations.tsx  overview.tsx  requests.tsx  storage.tsx  users.tsx
apps/docs/: package-lock.json  package.json
apps/docs/src/: App.css  App.tsx  index.css
apps/migrate/: Cargo.toml
apps/migrate/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/website/: README.md  package-lock.json  package.json
apps/website/content/docs/: admin-api.mdx  architecture.mdx  cli-reference.mdx  configuration.mdx  deployment.mdx  example-project.mdx  extensions.mdx  getting-started.mdx  introduction.mdx  js-sdk.mdx  local-lifecycle.mdx  project-structure.mdx  todo-example.mdx
apps/website/src/app/: globals.css  layout.tsx  page.tsx
apps/website/src/app/docs/: layout.tsx  page.tsx
apps/website/src/app/docs/[slug]/: page.tsx
apps/website/src/components/: docs-pager.tsx  docs-sidebar.tsx  icons.tsx  mdx-content.tsx  site-footer.tsx  site-header.tsx  terminal-card.tsx  theme-toggle.tsx
apps/website/src/lib/: docs.ts
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
config/: default.yaml  local.yaml
crates/admin/: Cargo.toml
crates/admin/src/: lib.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/capability/: Cargo.toml
crates/capability/src/: lib.rs
crates/database-inspection/: Cargo.toml
crates/database-inspection/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/event-log/: Cargo.toml
crates/event-log/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/files/: Cargo.toml
crates/files/src/: lib.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: lib.rs
crates/ops/: Cargo.toml
crates/ops/src/: lib.rs
crates/orchestration/: Cargo.toml
crates/orchestration/src/: diagnostics.rs  infrastructure.rs  lib.rs  manager.rs  process.rs  project.rs  state.rs
crates/organizations/: Cargo.toml
crates/organizations/src/: lib.rs
crates/ports/: Cargo.toml
crates/ports/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
deploy/: Dockerfile  Dockerfile.dashboard  nginx-dashboard.conf
examples/my-api/: .gitignore  Cargo.toml  README.md  compose.yaml
examples/my-api/.boson/: config.yaml  project.toml
examples/my-api/apps/app/: Cargo.toml
examples/my-api/apps/app/src/: lib.rs
examples/my-api/apps/migrate/: Cargo.toml
examples/my-api/apps/migrate/src/: main.rs
examples/my-api/apps/server/: Cargo.toml
examples/my-api/apps/server/src/: main.rs
examples/my-api/apps/worker/: Cargo.toml
examples/my-api/apps/worker/src/: main.rs
examples/my-api/capabilities/items/: Cargo.toml
examples/my-api/capabilities/items/migrations/: 20260718210000_items.sql
examples/my-api/capabilities/items/src/: lib.rs
examples/todo/: Cargo.toml  README.md  compose.yaml
examples/todo/.boson/: project.toml
examples/todo/apps/migrate/: Cargo.toml
examples/todo/apps/migrate/src/: main.rs
examples/todo/apps/server/: Cargo.toml
examples/todo/apps/server/src/: main.rs
examples/todo/apps/worker/: Cargo.toml
examples/todo/apps/worker/src/: main.rs
examples/todo/capabilities/todos/: Cargo.toml
examples/todo/capabilities/todos/migrations/: 20260718210000_todos.sql
examples/todo/capabilities/todos/src/: lib.rs
examples/todo/config/: default.yaml  local.yaml
migrations/: 20260718110000_bootstrap.sql  20260718120000_admin_identity.sql  20260718130000_end_user_identity.sql  20260718140000_files.sql  20260718150000_jobs_events.sql  20260718160000_organizations.sql  20260718170000_request_traces.sql  20260718180000_audit.sql  20260718190000_notifications_identity_actions.sql
