[workspace]
members = [
    "apps/server",
    "apps/worker",
    "apps/cli",
    "crates/kernel",
    "crates/ports",
    "crates/events",
    "crates/db",
    "crates/ops",
    "crates/capability",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.94"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
