[workspace]
members = [
    "apps/server",
    "apps/worker",
    "apps/migrate",
    "apps/cli",
    "adapters/storage-local",
    "adapters/queue-postgres",
    "adapters/mailer-local",
    "crates/kernel",
    "crates/ports",
    "crates/events",
    "crates/db",
    "crates/ops",
    "crates/capability",
    "crates/sdk",
    "crates/runtime",
    "crates/orchestration",
    "crates/admin",
    "crates/audit",
    "crates/notifications",
    "crates/database-inspection",
    "crates/identity",
    "crates/organizations",
    "crates/files",
    "crates/jobs",
    "crates/event-log",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.94"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
