[package]
name = "boson-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "boson"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
boson-db = { version = "0.1.0", path = "../../crates/db" }
boson-kernel = { version = "0.1.0", path = "../../crates/kernel" }
boson-runtime = { version = "0.1.0", path = "../../crates/runtime" }
clap = { version = "4.6.2", features = ["derive", "env"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["full"] }
toml = "0.9.5"

[dev-dependencies]
tempfile = "3.20.0"
