[package]
name = "boson-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.103"
boson-runtime = { version = "0.1.0", path = "../../crates/runtime" }
tokio = { version = "1.53.0", features = ["full"] }

[lints]
workspace = true
