[package]
name = "boson-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8.9"
boson-capability = { version = "0.1.0", path = "../capability" }
boson-db = { version = "0.1.0", path = "../db" }
boson-kernel = { version = "0.1.0", path = "../kernel" }
chrono = "0.4.45"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
subtle = "2.6.1"
thiserror = "2.0.18"
uuid = { version = "1.24.0", features = ["v4", "v7", "serde"] }

[lints]
workspace = true
