[package]
name = "boson-capability"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
boson-events = { version = "0.1.0", path = "../events" }
boson-ports = { version = "0.1.0", path = "../ports" }
thiserror = "2.0.18"

[lints]
workspace = true
