[package]
name = "boson-database-inspection"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8.9"
boson-admin = { version = "0.1.0", path = "../admin" }
boson-capability = { version = "0.1.0", path = "../capability" }
boson-ports = { version = "0.1.0", path = "../ports" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[lints]
workspace = true
