[package]
name = "boson-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.9"
boson-admin = { version = "0.1.0", path = "../admin" }
boson-capability = { version = "0.1.0", path = "../capability" }
boson-db = { version = "0.1.0", path = "../db" }
boson-kernel = { version = "0.1.0", path = "../kernel" }
chrono = "0.4.45"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
thiserror = "2.0.18"
uuid = { version = "1.24.0", features = ["v4", "v7", "serde"] }

[lints]
workspace = true
