[package]
name = "boson-ops"
version = "0.1.0"
edition = "2024"

[dependencies]
boson-ports = { version = "0.1.0", path = "../ports" }
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.53.0", features = ["sync", "time"] }
