[package]
name = "boson-ops"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
boson-capability = { version = "0.1.0", path = "../capability" }
boson-db = { version = "0.1.0", path = "../db" }
boson-kernel = { version = "0.1.0", path = "../kernel" }
boson-ports = { version = "0.1.0", path = "../ports" }
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["sync", "time"] }
