[package]
name = "boson-ops"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
boson-capability = { version = "0.1.0", path = "../capability" }
boson-db = { version = "0.1.0", path = "../db" }
boson-kernel = { version = "0.1.0", path = "../kernel" }
boson-ports = { version = "0.1.0", path = "../ports" }
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1.53.0", features = ["sync", "time"] }
tracing = "0.1.44"
uuid = { version = "1.21.0", features = ["serde", "v7"] }
