[package]
name = "boson-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared Boson server/worker composition runtime"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
boson-admin = { version = "0.1.0", path = "../admin" }
boson-audit = { version = "0.1.0", path = "../audit" }
boson-capability = { version = "0.1.0", path = "../capability" }
boson-database-inspection = { version = "0.1.0", path = "../database-inspection" }
boson-db = { version = "0.1.0", path = "../db" }
boson-event-log = { version = "0.1.0", path = "../event-log" }
boson-events = { version = "0.1.0", path = "../events" }
boson-files = { version = "0.1.0", path = "../files" }
boson-identity = { version = "0.1.0", path = "../identity" }
boson-jobs = { version = "0.1.0", path = "../jobs" }
boson-kernel = { version = "0.1.0", path = "../kernel" }
boson-mailer-local = { version = "0.1.0", path = "../../adapters/mailer-local" }
boson-notifications = { version = "0.1.0", path = "../notifications" }
boson-ops = { version = "0.1.0", path = "../ops" }
boson-organizations = { version = "0.1.0", path = "../organizations" }
boson-ports = { version = "0.1.0", path = "../ports" }
boson-queue-postgres = { version = "0.1.0", path = "../../adapters/queue-postgres" }
boson-storage-local = { version = "0.1.0", path = "../../adapters/storage-local" }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["full"] }
tower-http = { version = "0.7.0", features = ["trace", "cors"] }
tracing = "0.1.44"

[lints]
workspace = true
