[package]
name = "boson-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Public Capability SDK for building Boson application capabilities"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
boson-admin = { version = "0.1.0", path = "../admin" }
boson-capability = { version = "0.1.0", path = "../capability" }
boson-db = { version = "0.1.0", path = "../db" }
boson-events = { version = "0.1.0", path = "../events" }
boson-identity = { version = "0.1.0", path = "../identity" }
boson-kernel = { version = "0.1.0", path = "../kernel" }
boson-ports = { version = "0.1.0", path = "../ports" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
thiserror = "2.0.18"
uuid = { version = "1.24.0", features = ["v7", "serde"] }

[lints]
workspace = true
